syntax = "proto3";

package auction;

option java_package = "auction.managment";
option java_multiple_files = true;

import "article_info.proto";

enum State{
  SUCCESS = 0;
  ERROR = 1;
}

message CreateArticleRequest { string user = 1; ArticleInfo info = 2; }

message CreateArticleResponse { State state = 1; }

/*
message SearchLaptopRequest { Filter filter = 1; }

message SearchLaptopResponse { Laptop laptop = 1; }

message UploadImageRequest {
  oneof data {
    ImageInfo info = 1;
    bytes chunk_data = 2;
  };
}

message ImageInfo {
  string laptop_id = 1;
  string image_type = 2;
}

message UploadImageResponse {
  string id = 1;
  uint32 size = 2;
}

message RateLaptopRequest {
  string laptop_id = 1;
  double score = 2;
}

message RateLaptopResponse {
  string laptop_id = 1;
  uint32 rated_count = 2;
  double average_score = 3;
}
*/
service ArticleService {
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse) {};
  /*
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {
  };
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {};
  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {
  };
   */
}